--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open Sans:200,300,400,500,600,700,800"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open Sans:200,300,400,500,600,700,800" rel="stylesheet" />
     <title>React App</title>
   </head>
   <body>
